[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font/Rubik-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Boot/BootTopbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Boot/BootSplash.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "start"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="BootSplash" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/start = SubResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 125, 125 )
custom_fonts/font = SubResource( 2 )
text = "@tadescript

"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yt" type="LinkButton" parent="Label"]
margin_left = 10.75
margin_top = 126.25
margin_right = 77.75
margin_bottom = 145.25
custom_fonts/font = SubResource( 3 )
text = "YouTube |"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ig" type="LinkButton" parent="Label"]
margin_left = 89.75
margin_top = 126.25
margin_right = 165.75
margin_bottom = 145.25
custom_fonts/font = SubResource( 3 )
text = "Instagram |"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tt" type="LinkButton" parent="Label"]
margin_left = 177.75
margin_top = 126.25
margin_right = 230.75
margin_bottom = 145.25
custom_fonts/font = SubResource( 3 )
text = "Twitter"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tiktok" type="LinkButton" parent="Label"]
margin_left = 101.25
margin_top = 147.75
margin_right = 148.25
margin_bottom = 166.75
custom_fonts/font = SubResource( 3 )
text = "TikTok"
underline = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Topbar" parent="." instance=ExtResource( 2 )]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="button_down" from="Label/yt" to="." method="_on_yt_button_down"]
[connection signal="button_down" from="Label/ig" to="." method="_on_ig_button_down"]
[connection signal="button_down" from="Label/tt" to="." method="_on_tt_button_down"]
[connection signal="button_down" from="Label/tiktok" to="." method="_on_tiktok_button_down"]
